Updated with environment variables and less noise